objects/New_Solution_Design__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cloud Approval Processs</relationshipLabel>
        <relationshipName>Cloud_Approval_Processs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Team_Members__c</fullName>
        <label>Additional Team Members</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Geo_Redundancy__c</fullName>
        <label>Advanced/Geo Redundancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Rejected_Date__c</fullName>
        <label>Approved/Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Architecture_Diagram_URL__c</fullName>
        <label>Architecture Diagram URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Architecture_PCC_Action_Date__c</fullName>
        <label>Architecture PCC Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Architecture_PCC_Actor__c</fullName>
        <label>Architecture PCC Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blended_Agents__c</fullName>
        <label># Blended Agents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP_Name_Formula__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp;Id, CAP_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP_Name__c</fullName>
        <label>CAP Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <label>**CRM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>CIC4SF w/o email2case</fullName>
                </value>
                <value>
                    <fullName>CIC4SF with email2case</fullName>
                </value>
                <value>
                    <fullName>MS Dynamics</fullName>
                </value>
                <value>
                    <fullName>Oracle Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Oracle Siebel</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>ZenDesk</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaaS_Region__c</fullName>
        <label>**CaaS Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>N / A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculator_attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculator attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chain_of_Command__c</fullName>
        <label>Chain of Command</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compelling_Event__c</fullName>
        <label>Compelling Event</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition_Notes__c</fullName>
        <label>Competition Notes</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditionally_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditionally Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contracts_signed_MSLA_Service_Order__c</fullName>
        <label>Contracts signed (MSLA &amp; Service Order)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Environment__c</fullName>
        <label>Current Environment</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Architecture_Diagram__c</fullName>
        <description>Customer Architecture Diagram URL</description>
        <label>Customer Architecture Diagram</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>SC_Engagement__r.AccountName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Kickoff__c</fullName>
        <label>Customer Project Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Plan_Committed__c</fullName>
        <label>Customer Project Plan Committed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_s_Goals__c</fullName>
        <label>Customer&apos;s Goals</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customizations_Phase_11__c</fullName>
        <label>Customizations - Phase 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party WFM</fullName>
                </value>
                <value>
                    <fullName>Custom API Endpoint</fullName>
                </value>
                <value>
                    <fullName>New Payment Processor</fullName>
                </value>
                <value>
                    <fullName>Non-Standard Reporting</fullName>
                </value>
                <value>
                    <fullName>Non-Standard SSO</fullName>
                </value>
                <value>
                    <fullName>CRM Integration</fullName>
                </value>
                <value>
                    <fullName>Complex Web Flow/Page</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customizations_Phase_1__c</fullName>
        <label>**Customizations - Phase 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Advanced ACD</fullName>
                </value>
                <value>
                    <fullName>Advanced Callbacks</fullName>
                </value>
                <value>
                    <fullName>Advanced Manual Dial</fullName>
                </value>
                <value>
                    <fullName>Automated Callbacks</fullName>
                </value>
                <value>
                    <fullName>Blackchair Spotlight (PureConnect)</fullName>
                </value>
                <value>
                    <fullName>Contact List Importer</fullName>
                </value>
                <value>
                    <fullName>Dynamic Percentage Routing</fullName>
                </value>
                <value>
                    <fullName>PureConnect Deprecated Applications</fullName>
                </value>
                <value>
                    <fullName>PureConnect GWFM Connector</fullName>
                </value>
                <value>
                    <fullName>Recording Export Middleware</fullName>
                </value>
                <value>
                    <fullName>Segment Log Parser</fullName>
                </value>
                <value>
                    <fullName>User Import Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customizations_Phase_22__c</fullName>
        <label>Customizations - Phase 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party WFM</fullName>
                </value>
                <value>
                    <fullName>Custom API Endpoint</fullName>
                </value>
                <value>
                    <fullName>New Payment Processor</fullName>
                </value>
                <value>
                    <fullName>Non-Standard Reporting</fullName>
                </value>
                <value>
                    <fullName>Non-Standard SSO</fullName>
                </value>
                <value>
                    <fullName>CRM Integration</fullName>
                </value>
                <value>
                    <fullName>Complex Web Flow/Page</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Data_Access__c</fullName>
        <label>**DB Data Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Customer will host DB</fullName>
                </value>
                <value>
                    <fullName>Nightly DB export to FTPS</fullName>
                </value>
                <value>
                    <fullName>Read-Only DB (hourly log shipping)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSR_SCE_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSR SCE Design</label>
        <referenceTo>DSR_SCE_Design__c</referenceTo>
        <relationshipName>New_Solution_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deploy_initially_with_IO_Internet_Voi__c</fullName>
        <label>**Deploy initially with IO/Internet Voip</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_Model__c</fullName>
        <label>**Deployment Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Remote Control VoIP</fullName>
                </value>
                <value>
                    <fullName>Remote Control IO</fullName>
                </value>
                <value>
                    <fullName>Remote Control IO w/RVA</fullName>
                </value>
                <value>
                    <fullName>Remote Control IO w/MPLS</fullName>
                </value>
                <value>
                    <fullName>Local Control VoIP</fullName>
                </value>
                <value>
                    <fullName>Local Control VoIP w/ RVA</fullName>
                </value>
                <value>
                    <fullName>Remote Control VoIP w / RVA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Assumptions__c</fullName>
        <label>Design Assumptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Phase_Completed__c</fullName>
        <label>Design Phase Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_of_Customization_Phase_2__c</fullName>
        <label>Details of Customization Phase 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Customization_Phase_3__c</fullName>
        <label>Details of Customization Phase 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Customizations_Requested__c</fullName>
        <label>Details of Customization Phase 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Server__c</fullName>
        <label>**Dev Server</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Use production ancillary (MS/RCS)</fullName>
                </value>
                <value>
                    <fullName>Have dedicated ancillary (MS/RCS) [+$]</fullName>
                </value>
                <value>
                    <fullName>Marquee [+$]</fullName>
                </value>
                <value>
                    <fullName>CRM Integration [+$]</fullName>
                </value>
                <value>
                    <fullName>WFM Integration [+$]</fullName>
                </value>
                <value>
                    <fullName>Custom PS middleware/server [+$]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dialer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dialer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Phase_Complete__c</fullName>
        <label>Discovery Phase Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery__c</fullName>
        <label>Discovery</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Customer_want_to_put_the_data_traff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does Customer want to put the data traffic (UIs, APIs, etc.) over the MPLS</description>
        <inlineHelpText>Does Customer want to put the data traffic (UIs, APIs, etc.) over the MPLS</inlineHelpText>
        <label>Does Customer want to put the data traff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_messaging_volume_max_per_hour__c</fullName>
        <label>Email messaging volume max per hour</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_messaging_volume_max_per_min__c</fullName>
        <label>Email messaging volume max (per min)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date_Phase_1__c</fullName>
        <label>Go-Live Date (Phase 1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISR__c</fullName>
        <label>**ISR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Female - Dutch-Netherlands(nl-NL)</fullName>
                </value>
                <value>
                    <fullName>Female - English-United States(en-US)</fullName>
                </value>
                <value>
                    <fullName>Female - English-Australia(en-AU)</fullName>
                </value>
                <value>
                    <fullName>Female - English-Great Britain(en-GB)</fullName>
                </value>
                <value>
                    <fullName>Female - French-Canada(fr-CA)</fullName>
                </value>
                <value>
                    <fullName>Female - French-France(fr-FR)</fullName>
                </value>
                <value>
                    <fullName>Female - German-Germany(de-DE)</fullName>
                </value>
                <value>
                    <fullName>Female - Italian-Italy(it-IT)</fullName>
                </value>
                <value>
                    <fullName>Female - Japanese-Japan(ja-JP)</fullName>
                </value>
                <value>
                    <fullName>Female - Mandarin-China(zh-CN)</fullName>
                </value>
                <value>
                    <fullName>Female - Portuguese-Brazil(pt-BR)</fullName>
                </value>
                <value>
                    <fullName>Female - Spanish-Spain(es-ES)</fullName>
                </value>
                <value>
                    <fullName>Female - Spanish-United States(es-US)</fullName>
                </value>
                <value>
                    <fullName>Male - Dutch-Netherlands(nl-NL)</fullName>
                </value>
                <value>
                    <fullName>Male - English-United States(en-US)</fullName>
                </value>
                <value>
                    <fullName>Male - English-Australia(en-AU)</fullName>
                </value>
                <value>
                    <fullName>Male - English-Great Britain(en-GB)</fullName>
                </value>
                <value>
                    <fullName>Male - French-Canada(fr-CA)</fullName>
                </value>
                <value>
                    <fullName>Male - French-France(fr-FR)</fullName>
                </value>
                <value>
                    <fullName>Male - German-Germany(de-DE)</fullName>
                </value>
                <value>
                    <fullName>Male - Italian-Italy(it-IT)</fullName>
                </value>
                <value>
                    <fullName>Male - Japanese-Japan(ja-JP)</fullName>
                </value>
                <value>
                    <fullName>Male - Mandarin-China(zh-CN)</fullName>
                </value>
                <value>
                    <fullName>Male - Portuguese-Brazil(pt-BR)</fullName>
                </value>
                <value>
                    <fullName>Male - Spanish-Spain(es-ES)</fullName>
                </value>
                <value>
                    <fullName>Male - Spanish-United States(es-US)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_customer_provide_their_own_hardware__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If using MPLS, will customer provide their own hardware for termination?</description>
        <inlineHelpText>If using MPLS, will customer provide their own hardware for termination?</inlineHelpText>
        <label>If customer provide their own hardware?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Complexity__c</fullName>
        <label>Implementation Complexity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complex MPLS</fullName>
                </value>
                <value>
                    <fullName>Complex Environment Integration</fullName>
                </value>
                <value>
                    <fullName>Lack of Clarity with Regards to Future Product Availability</fullName>
                </value>
                <value>
                    <fullName>Any Doubt that Requires Further Discussion Among POR Borard</fullName>
                </value>
                <value>
                    <fullName>Customization (Different from Configuration)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intelligent_Automation_Nuance__c</fullName>
        <label>**Intelligent Automation – Nuance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Female - English-Great Britain(en-gb)</fullName>
                </value>
                <value>
                    <fullName>Female - English-United States(en-us)</fullName>
                </value>
                <value>
                    <fullName>Female - Arabic (ar-ww)</fullName>
                </value>
                <value>
                    <fullName>Female - Czech (cs-cz)</fullName>
                </value>
                <value>
                    <fullName>Female - German (de-de)</fullName>
                </value>
                <value>
                    <fullName>Female - Spanish-Spain(es-es)</fullName>
                </value>
                <value>
                    <fullName>Female - Spanish-Mexico (es-mx)</fullName>
                </value>
                <value>
                    <fullName>Female – French-France (fr-fr)</fullName>
                </value>
                <value>
                    <fullName>Female - Hindi (hi-in)</fullName>
                </value>
                <value>
                    <fullName>Female - Hungarian (hu-hu)</fullName>
                </value>
                <value>
                    <fullName>Female - Italian (it-it)</fullName>
                </value>
                <value>
                    <fullName>Female - Japanese (ja-jp)</fullName>
                </value>
                <value>
                    <fullName>Female - Malayalam (ml-in)</fullName>
                </value>
                <value>
                    <fullName>Female - Dutch (nl-nl)</fullName>
                </value>
                <value>
                    <fullName>Female - Polish (pl-pl)</fullName>
                </value>
                <value>
                    <fullName>Female - Portuguese (pt-pt)</fullName>
                </value>
                <value>
                    <fullName>Female - Russian (ru-ru)</fullName>
                </value>
                <value>
                    <fullName>Female - Chinese Cantonese (zh-hk)</fullName>
                </value>
                <value>
                    <fullName>Female - Chinese Mandarin (zh-ma)</fullName>
                </value>
                <value>
                    <fullName>Male - English-Great Britain(en-gb)</fullName>
                </value>
                <value>
                    <fullName>Male - English-United States(en-us)</fullName>
                </value>
                <value>
                    <fullName>Male - Arabic (ar-ww)</fullName>
                </value>
                <value>
                    <fullName>Male - Czech (cs-cz)</fullName>
                </value>
                <value>
                    <fullName>Male - German (de-de)</fullName>
                </value>
                <value>
                    <fullName>Male - Spanish (es-es)</fullName>
                </value>
                <value>
                    <fullName>Male - Mexican Spanish (es-mx)</fullName>
                </value>
                <value>
                    <fullName>Male - French (fr-fr)</fullName>
                </value>
                <value>
                    <fullName>Male - Hindi (hi-in)]</fullName>
                </value>
                <value>
                    <fullName>Male - Hungarian (hu-hu)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interaction Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internet_Egress__c</fullName>
        <label>**Internet Egress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Genesys (HTTPS only w/ Public CA)</fullName>
                </value>
                <value>
                    <fullName>Customer MPLS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsUpdateTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdateTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Customer_providing_Telecom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Customer providing Telecom for any of the call legs?</description>
        <inlineHelpText>Is Customer providing Telecom for any of the call legs?</inlineHelpText>
        <label>Is Customer providing Telecom ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Genesys_providing_Telecom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Genesys providing Telecom for any of the call legs?</description>
        <inlineHelpText>Is Genesys providing Telecom for any of the call legs?</inlineHelpText>
        <label>Is Genesys providing Telecom?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Outbound_Populated__c</fullName>
        <formula>AND(ISBLANK( Number_of_Genesys_provided_Inbound_phone__c ),
ISBLANK( SMS_Delivery_Receipts__c ),
ISBLANK( Number_of_OB_calls_max_hour__c ),
ISBLANK( Number_of_Outbound_Agents__c ),
ISBLANK( Number_of_OB_calls_avg_hour__c ),
ISBLANK( Number_of_Genesys_provided_agent_dial_in__c ),
ISBLANK( Supported_languages__c ),
ISBLANK( Supported_Countries__c ),
ISBLANK( Email_messaging_volume_max_per_hour__c ),
ISBLANK( Number_of_SMS_max_per_hour__c ),
ISBLANK( Number_of_custom_agent_scripts__c ),
ISBLANK( of_Outbound_Campaigns__c ),
ISBLANK( of_Outbound_Basic_Treatments__c ),
ISBLANK( of_Outbound_Lists_Automatically_Loaded__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Outbound Populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_VPN_required_for_Agent_traffic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is VPN required for Agent traffic?</description>
        <inlineHelpText>Is VPN required for Agent traffic?</inlineHelpText>
        <label>Is VPN required for Agent traffic?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPLS_Connectivity_with_Customer_Network__c</fullName>
        <label>MPLS Connectivity with Customer Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_MPLS_Service__c</fullName>
        <label>**Network / MPLS Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureConnect Cloud - Customer Provided MPLS</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud – ININ Provided Internet Only</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud - ININ Provided MPLS w/ RVA</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud - ININ Provide MPLS</fullName>
                </value>
                <value>
                    <fullName>Customer Managed VPN</fullName>
                </value>
                <value>
                    <fullName>Premise - Customer MPLS/WAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_Telco_Action_Date__c</fullName>
        <label>Network/Telco Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Network_Telco_Actor__c</fullName>
        <label>Network/Telco Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nuance_Recognizer__c</fullName>
        <label>**Nuance Recognizer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Female - Spanish-United States(es-us)</fullName>
                </value>
                <value>
                    <fullName>Female - French-France(fr-fr)</fullName>
                </value>
                <value>
                    <fullName>Female - Croatian-Croatia(hr-hr)</fullName>
                </value>
                <value>
                    <fullName>Female - Hungarian-Hungary(hu-hu)</fullName>
                </value>
                <value>
                    <fullName>Female - Italian-Italy(it-it)</fullName>
                </value>
                <value>
                    <fullName>Female - Dutch-Netherlands(nl-nl)</fullName>
                </value>
                <value>
                    <fullName>Female - Norwegian-Norway(no-no)</fullName>
                </value>
                <value>
                    <fullName>Female - Polish-Poland(pl-pl)</fullName>
                </value>
                <value>
                    <fullName>Female - Portuguese-Brazil(pt-br)</fullName>
                </value>
                <value>
                    <fullName>Female - Portuguese-Portugal(pt-pt)</fullName>
                </value>
                <value>
                    <fullName>Female - Romanian-Romania(ro-ro)</fullName>
                </value>
                <value>
                    <fullName>Female - Russian-Russian Federation(ru-ru)</fullName>
                </value>
                <value>
                    <fullName>Female - Slovak-Slovakia(sk-sk)</fullName>
                </value>
                <value>
                    <fullName>Female - Slovene-Slovenia(sl-si)</fullName>
                </value>
                <value>
                    <fullName>Female - Swedish-Sweden(sv-se)</fullName>
                </value>
                <value>
                    <fullName>Female - Thai-Thailand(th-th)</fullName>
                </value>
                <value>
                    <fullName>Female - Mandarin-Taiwan(zh-tw)</fullName>
                </value>
                <value>
                    <fullName>Male - Arabic-Worldwide(ar-ww)</fullName>
                </value>
                <value>
                    <fullName>Male - Bulgarian-Bulgaria(bg-bg)</fullName>
                </value>
                <value>
                    <fullName>Male - Czech-Czech Republic(cs-cz)</fullName>
                </value>
                <value>
                    <fullName>Male - German-Germany(de-de)</fullName>
                </value>
                <value>
                    <fullName>Male - Greek-Greece(el-gr)</fullName>
                </value>
                <value>
                    <fullName>Male - English-Great Britain(en-gb)</fullName>
                </value>
                <value>
                    <fullName>Male - English-United States(en-us)</fullName>
                </value>
                <value>
                    <fullName>Male - Spanish-Colombia(es-co)</fullName>
                </value>
                <value>
                    <fullName>Male - Spanish-Spain(es-es)</fullName>
                </value>
                <value>
                    <fullName>Male - Spanish-United States(es-us)</fullName>
                </value>
                <value>
                    <fullName>Male - French-France(fr-fr)</fullName>
                </value>
                <value>
                    <fullName>Male - Croatian-Croatia(hr-hr)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>